# textual-tetris

./: LICENSE  README.md  pyproject.toml
src/textual_tetris_game/: __init__.py  __main__.py  cli.py  game.py  ui.py
tests/: test_game.py
